--- a/ParkMaster/src/view/HomeInspector.form
+++ b/ParkMaster/src/view/HomeInspector.form
@@ -27,14 +27,6 @@
               <text value="Email"/>
             </properties>
           </component>
-          <component id="5341b" class="javax.swing.JPasswordField" binding="emailFieldText">
-            <constraints>
-              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
-              </grid>
-            </constraints>
-            <properties/>
-          </component>
           <component id="fc6d6" class="javax.swing.JLabel">
             <constraints>
               <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
@@ -43,7 +35,7 @@
               <text value="Password"/>
             </properties>
           </component>
-          <component id="340a3" class="javax.swing.JPasswordField" binding="passwordFieldText">
+          <component id="340a3" class="javax.swing.JPasswordField" binding="passwordTextField">
             <constraints>
               <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -61,6 +53,14 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
           </hspacer>
+          <component id="7da93" class="javax.swing.JTextField" binding="emailTextField">
+            <constraints>
+              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="-1"/>
+              </grid>
+            </constraints>
+            <properties/>
+          </component>
         </children>
       </grid>
       <grid id="4200" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -71,12 +71,12 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="62ef6" class="javax.swing.JButton" binding="signInButton" default-binding="true">
+          <component id="62ef6" class="javax.swing.JButton" binding="logInButton">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Sign in"/>
+              <text value="Log in"/>
             </properties>
           </component>
           <hspacer id="a50f0">
