--- a/ParkMaster/src/view/AddAdmin.form
+++ b/ParkMaster/src/view/AddAdmin.form
@@ -40,7 +40,7 @@
               <text value="Phone number"/>
             </properties>
           </component>
-          <component id="21ba2" class="javax.swing.JTextField" binding="nameFieldText">
+          <component id="21ba2" class="javax.swing.JTextField" binding="nameTextField">
             <constraints>
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -48,7 +48,7 @@
             </constraints>
             <properties/>
           </component>
-          <component id="a6783" class="javax.swing.JTextField" binding="lastNameFieldText">
+          <component id="a6783" class="javax.swing.JTextField" binding="lastNameTextField">
             <constraints>
               <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -56,7 +56,7 @@
             </constraints>
             <properties/>
           </component>
-          <component id="bfd64" class="javax.swing.JFormattedTextField" binding="phoneNumberFieldText">
+          <component id="bfd64" class="javax.swing.JFormattedTextField" binding="phoneNumberTextField">
             <constraints>
               <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -72,7 +72,7 @@
               <text value="Email"/>
             </properties>
           </component>
-          <component id="d38bc" class="javax.swing.JTextField" binding="emailFieldText">
+          <component id="d38bc" class="javax.swing.JTextField" binding="emailTextField">
             <constraints>
               <grid row="1" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -132,7 +132,7 @@
               <text value="PIN"/>
             </properties>
           </component>
-          <component id="4e3a6" class="javax.swing.JTextField" binding="billingAddressFieldText">
+          <component id="4e3a6" class="javax.swing.JTextField" binding="billingAddressTextField">
             <constraints>
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -140,7 +140,7 @@
             </constraints>
             <properties/>
           </component>
-          <component id="469f8" class="javax.swing.JFormattedTextField" binding="hireDateFieldText">
+          <component id="469f8" class="javax.swing.JFormattedTextField" binding="hireDateTextField">
             <constraints>
               <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -148,7 +148,7 @@
             </constraints>
             <properties/>
           </component>
-          <component id="33d5f" class="javax.swing.JPasswordField" binding="pinFieldText">
+          <component id="33d5f" class="javax.swing.JPasswordField" binding="pinTextField">
             <constraints>
               <grid row="1" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -156,7 +156,7 @@
             </constraints>
             <properties/>
           </component>
-          <component id="77916" class="javax.swing.JFormattedTextField" binding="idFieldText">
+          <component id="77916" class="javax.swing.JFormattedTextField" binding="idTextField">
             <constraints>
               <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
