--- a/ParkMaster/src/view/AddCustomer.form
+++ b/ParkMaster/src/view/AddCustomer.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="view.AddCustomer">
-  <grid id="27dc6" binding="addUserPanel" layout-manager="GridLayoutManager" row-count="6" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="addUserPanel" layout-manager="GridLayoutManager" row-count="7" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="800" height="600"/>
@@ -43,7 +43,7 @@
               <text value="Phone number"/>
             </properties>
           </component>
-          <component id="37d8a" class="javax.swing.JTextField" binding="nameFieldText">
+          <component id="37d8a" class="javax.swing.JTextField" binding="nameTextField">
             <constraints>
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -51,7 +51,7 @@
             </constraints>
             <properties/>
           </component>
-          <component id="7020a" class="javax.swing.JTextField" binding="lastNameFieldText">
+          <component id="7020a" class="javax.swing.JTextField" binding="lastNameTextField">
             <constraints>
               <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -59,7 +59,7 @@
             </constraints>
             <properties/>
           </component>
-          <component id="fd7b9" class="javax.swing.JFormattedTextField" binding="phoneNumberFieldText">
+          <component id="fd7b9" class="javax.swing.JFormattedTextField" binding="phoneNumberTextField">
             <constraints>
               <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -95,7 +95,7 @@
               <text value="Billing Address"/>
             </properties>
           </component>
-          <component id="f376" class="javax.swing.JTextField" binding="billingAddressFieldText">
+          <component id="f376" class="javax.swing.JTextField" binding="billingAddressTextField">
             <constraints>
               <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -121,7 +121,7 @@
               <text value="Email"/>
             </properties>
           </component>
-          <component id="4d615" class="javax.swing.JTextField" binding="emailFieldText">
+          <component id="4d615" class="javax.swing.JTextField" binding="emailTextField">
             <constraints>
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -129,7 +129,7 @@
             </constraints>
             <properties/>
           </component>
-          <component id="ddb1b" class="javax.swing.JFormattedTextField" binding="idFieldText">
+          <component id="ddb1b" class="javax.swing.JFormattedTextField" binding="idTextField">
             <constraints>
               <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -233,17 +233,17 @@
       <grid id="c6509" layout-manager="GridLayoutManager" row-count="1" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
         <children>
-          <component id="84b72" class="javax.swing.JButton" binding="createInspectorButton" default-binding="true">
+          <component id="84b72" class="javax.swing.JButton" binding="createCustomer" default-binding="true">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Create Inspector"/>
+              <text value="Sign up"/>
             </properties>
           </component>
           <hspacer id="d1d99">
@@ -271,7 +271,7 @@
           </hspacer>
         </children>
       </grid>
-      <grid id="14589" layout-manager="GridLayoutManager" row-count="3" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="14589" layout-manager="GridLayoutManager" row-count="4" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -347,12 +347,20 @@
               <text value="Model"/>
             </properties>
           </component>
+          <component id="49e62" class="javax.swing.JButton" binding="addANewVehicleButton" default-binding="true">
+            <constraints>
+              <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Add a new vehicle"/>
+            </properties>
+          </component>
         </children>
       </grid>
       <grid id="1595b" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
