--- a/ParkMaster/src/view/HomeCustomer.form
+++ b/ParkMaster/src/view/HomeCustomer.form
@@ -24,7 +24,7 @@
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Email"/>
+              <text value="ID"/>
             </properties>
           </component>
           <component id="47f5c" class="javax.swing.JLabel">
@@ -53,7 +53,7 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
           </hspacer>
-          <component id="c017" class="javax.swing.JTextField" binding="emailTextField">
+          <component id="c017" class="javax.swing.JTextField" binding="idTextField">
             <constraints>
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
