--- a/ParkMaster/src/view/HomeInspector.form
+++ b/ParkMaster/src/view/HomeInspector.form
@@ -53,7 +53,7 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
           </hspacer>
-          <component id="7da93" class="javax.swing.JTextField" binding="emailTextField">
+          <component id="7da93" class="javax.swing.JTextField" binding="idTextField">
             <constraints>
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
