Calendar Library added
A library was added to manage the date, thankfully as it was a headache to manage it with restrictions or God forbid, using different JTextFields for day, month and day, we will be using the JCalendar library from https://toedter.com/jcalendar/

--- a/ParkMaster/src/view/ManageAdmin.form
+++ b/ParkMaster/src/view/ManageAdmin.form
@@ -154,13 +154,10 @@
               <text value="Hire date"/>
             </properties>
           </component>
-          <component id="57888" class="javax.swing.JTextField" binding="hireDateTextField">
+          <component id="4a688" class="com.toedter.calendar.JDateChooser" binding="dateChooser" custom-create="true">
             <constraints>
-              <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
-              </grid>
+              <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
-            <properties/>
           </component>
         </children>
       </grid>
